Updated swagger and report, resubmitted
